# stdworkspace

./: Cargo.toml
adder/src/: lib.rs
adder/test/: integration_test.rs
advancefeatures/: Cargo.toml
advancefeatures/src/: advancetraits.rs  rawpointer.rs
chapters/: Cargo.toml
chapters/src/: lib.rs
concurrency/src/: lib.rs
drop/src/: lib.rs
functionallaguage/: Cargo.toml
functionallaguage/src/: lib.rs  main.rs
hello/Template/: 404.html  hello.html
hello/src/: lib.rs  main.rs
hello_/: Cargo.toml
hello_/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
oop/src/: blog.rs  lib.rs
patterns/src/: lib.rs
pointers/src/: lib.rs  main.rs
practices/: Cargo.toml
practices/src/: lib.rs
