[package]
name = "stdworkspace"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "adder", "advancefeatures",
    "chapters", 
    "collections", "concurrency", "drop", "functionallaguage", "hello", "hello_", "minigrep", "oop", "patterns", "pointers", 
    "practices",
    "string",
]
[dependencies]
